[RootLayerScrolls] Fix hit testing from remote inspector.

BUG=808475
R=bokan@chromium.org,skobes@chromium.org

Change-Id: I3dfe9e574b049183598037a4adfec68f7d83ff9c
Reviewed-on: https://chromium-review.googlesource.com/910652
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Stefan Zager <szager@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535649}
Former-commit-id: 3343aba29860c74e6ed948289e1e144e6256ffec